# MandelbrotSet

./: .gitignore  CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  README.md  check_util.h  color_palette.h  complex.h  mandelbrot_calculator.cpp  mandelbrot_calculator.h  mandelbrot_gui.cpp  mandelbrot_gui.h  math_utils.h  opengl_image_wrapper.cpp  opengl_image_wrapper.h  vcpkg.json
